[package]
name = "houseedge"
version = "0.1.0"
edition = "2021"

# crate-type = ["cdylib"]

[dependencies]
# napi = { version = "3" }
# napi-derive = "3"
rand = "0.8"

[build-dependencies]
# napi-build = "1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
